--- a/index.html
+++ b/index.html
@@ -1,43 +1,82 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Cross word Puzzel</title>
-<link rel="stylesheet" href="gamestyles.css" />
+    <head>
+        <title>Wesleyan Crossword</title>
+        <link rel="stylesheet" href="gamestyles.css" />
+        <meta name= "viewport" content= "width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="stylepractice.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Suranna&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Rozha+One&family=Yeseva+One&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://use.typekit.net/div0nxt.css">
+    </head>
 
-</head>
-<body onload="initializeScreen()">
-	<script src="puzzle.js"></script>
-	<div>
-		<h1><b></b>The Wesleyan Crossword Mini</style><b></b></h1>
-		<br>
-		<hr>
-		
-	</div>
-<div id="leftBox">
-<table id="puzzel">
-</table>
-</div>
-<div id="rightBox">
-<table>
-	<tr><td><input class="butt"  type="submit" value="Clear All" onclick="clearAllClicked()"></td>
-	<td><input class="butt"  type="submit" value="Check" onclick="checkClicked()"></td>
-	<td><input class="butt"  type="submit" value="Solve" onclick="solveClicked()"></td>
-	<td><input class="butt"  type="submit" value="Clue" onclick="clueClicked()"></td></tr>
-</table>
-</div>
-<table id="hintsTable">
-		<tr>
-			<td><strong>Horizontal:</strong></td><td><strong>Vertical:</strong></td>
-		</tr>
-		<tr>
-			<td>3. Cultural Hub (Hyderabad)</td><td>1. Education Hub (Pune)</td>
-		</tr>
-		<tr>
-			<td>5. India's financial capital (Mumbai)</td><td>2. Information Technology Hub (Bangalore)</td>
-		</tr>
-		<tr>
-			<td>6. Saffron region (Kashmir)</td><td>4. Capital of India (Delhi)</td>
-</table>
+    <body onload="initializeScreen()">
 
-</body>
+        <section class="header">
+            <nav>
+                <a href="StylePractice.html"><img src="WesleyanLogo.png" ></a>
+                <div class= "nav-links" id="navLinks">
+                    <i class="fa fa-times" onclick="hideMenu()" ></i>
+                    <ul>
+                        <li> <a href="">Home</a> </li>
+                        <li> <a href="">Archive</a> </li>
+                        <li> <a href="">User</a> </li>
+                        <li> <a href="">Login</a> </li>
+                    </ul>
+                </div>
+                <i class="fa fa-bars" onclick="showMenu()"></i>
+            </nav>
+            <div class=text-box>
+                <h1>Monday Mini</h1>
+                <ul>
+                    <li>By Will Hardison 1/14/2022</li>
+                </ul>
+                
+            </div>
+
+
+        <script src="puzzle.js"></script>
+        <div id="leftBox">
+            <table id="puzzel">
+            </table>
+        </div>
+        <div class="toolbar" id="rightBox">
+            <table>
+                <tr>
+                    <td class="timer">0:45</td>
+                    <td><input class="check-button"  type="submit" value="Check" onclick="checkClicked()"></td>
+                    <td><input class="solve-button"  type="submit" value="Solve" onclick="solveClicked()"></td>
+                    <td><input class="clue-button"  type="submit" value="Clue" onclick="clueClicked()"></td>
+                    <td><input class="pencil-button"  type="submit" value="Pencil" ></td>
+                    <td><input class="clear-button"  type="submit" value="Clear All" onclick="clearAllClicked()"></td>
+                </tr>
+            </table>
+        </div>
+        <table id="hintsTable">
+            <tr>
+                <td><strong>ACROSS</strong></td><td><strong>DOWN</strong></td>
+            </tr>
+            <tr>
+                <td>1   Who said that?</td><td>1   What you watch on TV</td>
+            </tr>
+            <tr>
+                <td>4  __ What she said</td><td>2   Meanie</td>
+            </tr>
+            <tr>
+                <td>6   Holds a bag</td><td>3   Electronic hot water drink</td>
+            </tr>
+            <tr>
+                <td>7   Dogs don't do it</td><td>4   Robot reads your writing (abbr.)</td>
+            </tr>
+            <tr>
+                <td>8   4th year students</td><td>5   Oppostite writing of 4 down</td>
+            </tr>
+        </table>
+    </body>
 </html>
