--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
     </head>
 
     <body onload="initializeScreen()">
-
         <section class="header">
             <nav>
                 <a href="StylePractice.html"><img src="WesleyanLogo.png" ></a>
                 <div class= "nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()" ></i>
                     <ul>
-                        <li> <a href="">Home</a> </li>
+                        <li> <a href=""">Home</a> </li>
                         <li> <a href="">Archive</a> </li>
                         <li> <a href="">User</a> </li>
                         <li> <a href="">Login</a> </li>
@@ -38,8 +37,18 @@
                 </ul>
                 
             </div>
+        </section>
 
-
+        <div id="stopwatch">
+            00:00:00
+        </div>
+        <div>
+            <ul id="timer-buttons">
+               <li><i id="play-button" class="fa fa-play" onclick="startTimer()"></i></li>
+               <li><i id="stop-button" class="fa fa-pause" onclick="stopTimer()"></i></li>
+               <li><i id="reset-button" class="fa fa-repeat" onclick="resetTimer()"></i></li>
+            </ul>
+        </div>
         <script src="puzzle.js"></script>
         <div id="leftBox">
             <table id="puzzel">
@@ -48,11 +57,10 @@
         <div class="toolbar" id="rightBox">
             <table>
                 <tr>
-                    <td class="timer">0:45</td>
                     <td><input class="check-button"  type="submit" value="Check" onclick="checkClicked()"></td>
                     <td><input class="solve-button"  type="submit" value="Solve" onclick="solveClicked()"></td>
                     <td><input class="clue-button"  type="submit" value="Clue" onclick="clueClicked()"></td>
-                    <td><input class="pencil-button"  type="submit" value="Pencil" ></td>
+                    <td><input class="pencil-button"  type="submit" value="Pencil" onclick="pencilClicked()" ></td>
                     <td><input class="clear-button"  type="submit" value="Clear All" onclick="clearAllClicked()"></td>
                 </tr>
             </table>
