Added a highlight clue, and presented the clue at the front, the problem is that when u type letter it messes it up

--- a/index.html
+++ b/index.html
@@ -70,20 +70,27 @@
                 <td><strong>ACROSS</strong></td><td><strong>DOWN</strong></td>
             </tr>
             <tr>
-                <td>1   Who said that?</td><td>1   What you watch on TV</td>
+                <td id="acrossClue1">1   Who said that?</td><td id="downClue1">1   What you watch on TV</td>
             </tr>
             <tr>
-                <td>4  __ What she said</td><td>2   Meanie</td>
+                <td id="acrossClue4">4  __ What she said</td><td id="downClue2">2   Meanie</td>
             </tr>
             <tr>
-                <td>6   Holds a bag</td><td>3   Electronic hot water drink</td>
+                <td id="acrossClue6">6   Holds a bag</td><td id="downClue3">3   Electronic hot water drink</td>
             </tr>
             <tr>
-                <td>7   Dogs don't do it</td><td>4   Robot reads your writing (abbr.)</td>
+                <td id="acrossClue7">7   Dogs don't do it</td><td id="downClue4">4   Robot reads your writing (abbr.)</td>
             </tr>
             <tr>
-                <td>8   4th year students</td><td>5   Oppostite writing of 4 down</td>
+                <td id="acrossClue8">8   4th year students</td><td id="downClue5">5   Oppostite writing of 4 down</td>
             </tr>
         </table>
+        <div id="clue-box">
+            <div>
+                <p id="clue-text"></p>
+            </div>
+        </div>
+            
+                    
     </body>
 </html>
