--- a/index.html
+++ b/index.html
@@ -70,6 +70,29 @@
                 <td><strong>ACROSS</strong></td><td><strong>DOWN</strong></td>
             </tr>
             <tr>
+                <td id="acrossClue1">1   Wesleyan observatory Location</td><td id="downClue1">1   Pet Hair</td>
+            </tr>
+            <tr>
+                <td id="acrossClue5">5  Section in a texbook</td><td id="downClue2">2  Half of Physician Duo</td>
+            </tr>
+            <tr>
+                <td id="acrossClue6">6   Old show playing now</td><td id="downClue3">3   Firetruck Noise</td>
+            </tr>
+            <tr>
+                <td id="acrossClue8">8   Reject</td><td id="downClue4">4   Leaves speechless</td>
+            </tr>
+            <tr>
+                <td id="acrossClue9">9   Registered Nurses of South Carolina</td><td id="downClue7">7   The Big Apple </td>
+            </tr>
+
+
+
+
+
+
+
+
+            <!-- <tr>
                 <td id="acrossClue1">1   Who said that?</td><td id="downClue1">1   What you watch on TV</td>
             </tr>
             <tr>
@@ -83,7 +106,7 @@
             </tr>
             <tr>
                 <td id="acrossClue8">8   4th year students</td><td id="downClue5">5   Oppostite writing of 4 down</td>
-            </tr>
+            </tr> -->
         </table>
         <div id="clue-box">
             <div>
