completion text+ update to check completed

--- a/index.html
+++ b/index.html
@@ -85,13 +85,6 @@
                 <td id="acrossClue9">9   Registered Nurses of South Carolina</td><td id="downClue7">7   The Big Apple </td>
             </tr>
 
-
-
-
-
-
-
-
             <!-- <tr>
                 <td id="acrossClue1">1   Who said that?</td><td id="downClue1">1   What you watch on TV</td>
             </tr>
@@ -108,6 +101,9 @@
                 <td id="acrossClue8">8   4th year students</td><td id="downClue5">5   Oppostite writing of 4 down</td>
             </tr> -->
         </table>
+        <div>
+            <p id="completion-text">Hmm... Not Quite Right</p>
+        </div>
         <div id="clue-box">
             <div>
                 <p id="clue-text"></p>
