changing some colors

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class=text-box>
                 <h1>Monday Mini</h1>
                 <ul>
-                    <li>By Will Casler 1/14/2022</li>
+                    <li>By Justin Hardison 1/26/2022</li>
                 </ul>
                 
             </div>
