style update (making everything relative

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body onload="initializeScreen()">
         <section class="header">
             <nav>
-                <a href="StylePractice.html"><img src="WesleyanLogo.png" ></a>
+                <a href="StylePractice.html"><img src="WesleyanCrosswordLogo.png" ></a>
                 <div class= "nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()" ></i>
                     <ul>
