--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
             <div class=text-box>
-                <h1>Monday Mini</h1>
+                <h1 id="weekday"></h1>
                 <ul>
                     <li id="author">By Justin Hardison </li>
                     <li id="date"></li>
