--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
                 <td><strong>ACROSS</strong></td><td><strong>DOWN</strong></td>
             </tr>
             <tr>
-                <td id="acrossClue1">1   Wesleyan observatory Location</td><td id="downClue1">1   Pet Hair</td>
+                <td id="acrossClue1">1   Process of getting the sum</td><td id="downClue1">1  de Armas, Ortiz, for example</td>
             </tr>
             <tr>
-                <td id="acrossClue5">5  Section in a texbook</td><td id="downClue2">2  Half of Physician Duo</td>
+                <td id="acrossClue5">5  Sandwich shop across from Freeman (with 2 down)</td><td id="downClue2">2  See 5 Across</td>
             </tr>
             <tr>
-                <td id="acrossClue6">6   Old show playing now</td><td id="downClue3">3   Firetruck Noise</td>
+                <td id="acrossClue6">6   Lead Chipmunk</td><td id="downClue3">3   Wedding birds</td>
             </tr>
             <tr>
-                <td id="acrossClue8">8   Reject</td><td id="downClue4">4   Leaves speechless</td>
+                <td id="acrossClue8">8   Mesh utensil used for straining</td><td id="downClue4">4   Grass-Type Pokemon with the ability to overgrow</td>
             </tr>
             <tr>
-                <td id="acrossClue9">9   Registered Nurses of South Carolina</td><td id="downClue7">7   The Big Apple </td>
+                <td id="acrossClue9">9   Artist part of the group "The Internet"</td><td id="downClue7">7   Simpson neighbor</td>
             </tr>
 
             <!-- <tr>
