fixed the pinterevents problem

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <td id="acrossClue8">8   Mesh utensil used for straining</td><td id="downClue4">4   Grass-Type Pokemon with the ability to overgrow</td>
             </tr>
             <tr>
-                <td id="acrossClue9">9   Artist part of the group "The Internet"</td><td id="downClue7">7   Simpson neighbor</td>
+                <td id="acrossClue9">9   Member of musiscal group "The Internet"</td><td id="downClue7">7   Simpson neighbor</td>
             </tr>
 
             <!-- <tr>
